--- a/styles/main.css
+++ b/styles/main.css
@@ -271,70 +271,73 @@ footer .socialmedia img {
     -ms-grid-rows: 30em 30em 30em 30em 30em 30em;
         grid-template-rows: 30em 30em 30em 30em 30em 30em;
   }
-  .home-grid a:hover {
-    -webkit-transition: .4s;
-    transition: .4s;
-    opacity: .5;
-  }
-  .home-grid a:nth-of-type(1) {
-    -ms-grid-column: 1;
-        grid-column-start: 1;
-    -ms-grid-column-span: 2;
-        grid-column-end: span 2;
-    -ms-grid-row: 1;
-        grid-row-start: 1;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-  .home-grid a:nth-of-type(5) {
-    -ms-grid-column: 3;
-        grid-column-start: 3;
-    -ms-grid-row: 2;
-        grid-row-start: 2;
-    -ms-grid-row-span: 2;
-        grid-row-end: span 2;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-  .home-grid a:nth-of-type(6) {
-    -ms-grid-column: 1;
-        grid-column-start: 1;
-    -ms-grid-row: 3;
-        grid-row-start: 3;
-    -ms-grid-column-span: 2;
-        grid-column-end: span 2;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-  .home-grid a:nth-of-type(8) {
-    -ms-grid-column: 2;
-        grid-column-start: 2;
-    -ms-grid-row: 4;
-        grid-row-start: 4;
-    -ms-grid-column-span: 2;
-        grid-column-end: span 2;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-  .home-grid a:nth-of-type(9) {
-    -ms-grid-column: 1;
-        grid-column-start: 1;
-    -ms-grid-row: 5;
-        grid-row-start: 5;
-    -ms-grid-row-span: 2;
-        grid-row-end: span 2;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-  .home-grid a:nth-of-type(12) {
-    -ms-grid-column: 2;
-        grid-column-start: 2;
-    -ms-grid-row: 6;
-        grid-row-start: 6;
-    -ms-grid-column-span: 2;
-        grid-column-end: span 2;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
+}
+
+.home-grid a img {
+  height: 100%;
+  width: 100%;
+  display: block;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.home-grid a:hover {
+  -webkit-transition: .4s;
+  transition: .4s;
+  opacity: .5;
+}
+
+.home-grid a:nth-of-type(1) {
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  -ms-grid-column-span: 2;
+      grid-column-end: span 2;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+}
+
+.home-grid a:nth-of-type(5) {
+  -ms-grid-column: 3;
+      grid-column-start: 3;
+  -ms-grid-row: 2;
+      grid-row-start: 2;
+  -ms-grid-row-span: 2;
+      grid-row-end: span 2;
+}
+
+.home-grid a:nth-of-type(6) {
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  -ms-grid-row: 3;
+      grid-row-start: 3;
+  -ms-grid-column-span: 2;
+      grid-column-end: span 2;
+}
+
+.home-grid a:nth-of-type(8) {
+  -ms-grid-column: 2;
+      grid-column-start: 2;
+  -ms-grid-row: 4;
+      grid-row-start: 4;
+  -ms-grid-column-span: 2;
+      grid-column-end: span 2;
+}
+
+.home-grid a:nth-of-type(9) {
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  -ms-grid-row: 5;
+      grid-row-start: 5;
+  -ms-grid-row-span: 2;
+      grid-row-end: span 2;
+}
+
+.home-grid a:nth-of-type(12) {
+  -ms-grid-column: 2;
+      grid-column-start: 2;
+  -ms-grid-row: 6;
+      grid-row-start: 6;
+  -ms-grid-column-span: 2;
+      grid-column-end: span 2;
 }
 /*# sourceMappingURL=main.css.map */
