--- a/styles/main.scss
+++ b/styles/main.scss
@@ -322,6 +322,13 @@ footer .socialmedia img{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 30em 30em 30em 30em 30em 30em;
+    }
+}
+.home-grid a img{
+    height: 100%;
+    width: 100%;
+    display: block;
+    object-fit: cover;
 }
 
 .home-grid a:hover {
@@ -333,41 +340,40 @@ footer .socialmedia img{
 grid-column-start: 1;
 grid-column-end: span 2;
 grid-row-start: 1;
-object-fit: cover;
+
 }
 
 .home-grid a:nth-of-type(5) {
     grid-column-start: 3;
     grid-row-start: 2;
     grid-row-end: span 2;
-    object-fit: cover;
+
     }
 
     .home-grid a:nth-of-type(6) {
         grid-column-start: 1;
         grid-row-start: 3;
         grid-column-end: span 2;
-        object-fit: cover;
+
         }
    .home-grid a:nth-of-type(8) {
       grid-column-start: 2;
      grid-row-start: 4;
     grid-column-end: span 2;
-    object-fit: cover;
+
             }
 
     .home-grid a:nth-of-type(9) {
         grid-column-start: 1;
        grid-row-start: 5;
       grid-row-end: span 2;
-      object-fit: cover;
+
                  }
     .home-grid a:nth-of-type(12) {
        grid-column-start: 2;
       grid-row-start: 6;
      grid-column-end: span 2;
-     object-fit: cover;
-                }     
+ 
 
 
 }
