--- a/styles/main.css
+++ b/styles/main.css
@@ -282,9 +282,10 @@ footer .socialmedia img {
 }
 
 .home-grid a:hover {
-  -webkit-transition: .4s;
-  transition: .4s;
-  opacity: .5;
+  -webkit-transition: .7s;
+  transition: .7s;
+  -webkit-filter: grayscale(1);
+          filter: grayscale(1);
 }
 
 .home-grid a:nth-of-type(1) {
