--- a/styles/main.scss
+++ b/styles/main.scss
@@ -333,7 +333,7 @@ footer .socialmedia img{
 
 .home-grid a:hover {
     transition: .7s;
-    filter: grayscale(1);
+    filter: grayscale(100%);
 }
 
 .home-grid a:nth-of-type(1) {
