--- a/styles/main.css
+++ b/styles/main.css
@@ -273,6 +273,13 @@ footer .socialmedia img {
   }
 }
 
+.home-grid a {
+  z-index: 1;
+  position: absolute;
+  color: white;
+  text-align: center;
+}
+
 .home-grid a img {
   height: 100%;
   width: 100%;
