--- a/styles/main.css
+++ b/styles/main.css
@@ -276,8 +276,10 @@ footer .socialmedia img {
 .home-grid a {
   z-index: 1;
   position: absolute;
+  font-size: 2em;
   color: white;
   text-align: center;
+  text-decoration: none;
 }
 
 .home-grid a img {
