--- a/styles/main.scss
+++ b/styles/main.scss
@@ -327,8 +327,10 @@ footer .socialmedia img{
 .home-grid a {
     z-index: 1;
     position: absolute;
+    font-size: 2em;
     color: white;
     text-align: center;
+    text-decoration: none;
 }
 .home-grid a img{
     height: 100%;
