--- a/styles/main.scss
+++ b/styles/main.scss
@@ -324,7 +324,7 @@ footer .socialmedia img{
     grid-template-rows: 30em 30em 30em 30em 30em 30em;
     }
 }
-.home-grid a:link {
+.home-grid a p{
     z-index: 1;
     position: absolute;
     font-size: 2em;
