--- a/styles/main.css
+++ b/styles/main.css
@@ -273,7 +273,7 @@ footer .socialmedia img {
   }
 }
 
-.home-grid a:link {
+.home-grid a p {
   z-index: 1;
   position: absolute;
   font-size: 2em;
