--- a/styles/main.scss
+++ b/styles/main.scss
@@ -344,10 +344,9 @@ footer .socialmedia img{
 .home-grid a:hover {
     transition: .7s;
     filter: grayscale(100%);
-}
-.home-grid a p:hover {
-    visibility: visible;
-    
+    & p{
+        visibility: visible;
+    }
 }
 
 .home-grid a:nth-of-type(1) {
