--- a/styles/main.scss
+++ b/styles/main.scss
@@ -341,7 +341,7 @@ footer .socialmedia img{
     object-fit: cover;
 }
 
-.home-grid a:hover {
+.home-grid a img:hover {
     transition: .7s;
     filter: grayscale(100%);
     & p{
