--- a/styles/main.scss
+++ b/styles/main.scss
@@ -328,11 +328,12 @@ footer .socialmedia img{
     z-index: 1;
     position: absolute;
     font-size: 3em;
-    color: $color3;
+    color: white;
     text-align: center;
     text-decoration: none;
     margin: 1em;
     opacity: 0%;
+    font-weight: 900;
 }
 .home-grid a img{
     height: 100%;
