--- a/styles/main.scss
+++ b/styles/main.scss
@@ -346,6 +346,7 @@ footer .socialmedia img{
     & img{
     transition: .7s;
     filter: grayscale(100%);
+    filter: brightness(40%); 
     }
     & p{
         transition: 1s;
