--- a/styles/main.scss
+++ b/styles/main.scss
@@ -335,6 +335,8 @@ footer .socialmedia img{
     margin: 1em;
     opacity: 0%;
     font-weight: 900;
+    display: flex;
+    flex-wrap: wrap;
 }
 .home-grid a img{
     height: 100%;
