--- a/styles/main.css
+++ b/styles/main.css
@@ -282,7 +282,7 @@ footer .socialmedia img {
   text-align: center;
   text-decoration: none;
   margin: 1em;
-  opacity: 0%;
+  opacity: 0;
   font-weight: 900;
 }
 
@@ -304,7 +304,7 @@ footer .socialmedia img {
 .home-grid a:hover p {
   -webkit-transition: 1s;
   transition: 1s;
-  opacity: 100%;
+  opacity: 1;
 }
 
 .home-grid a:nth-of-type(1) {
