--- a/styles/main.scss
+++ b/styles/main.scss
@@ -227,6 +227,10 @@ footer .socialmedia img{
         margin-bottom: 0;
   
     }
+    h1:hover{
+        color: indigo;
+        transition: .4s;
+    }
 
     h2 {
         font-size: 300%;
