--- a/styles/main.scss
+++ b/styles/main.scss
@@ -228,8 +228,9 @@ footer .socialmedia img{
   
     }
     h1:hover{
-        color: indigo;
+        color: linear-gradient(indigo, purple, magenta, pink);
         transition: .4s;
+        
     }
 
     h2 {
