--- a/styles/main.css
+++ b/styles/main.css
@@ -187,7 +187,8 @@ footer .socialmedia img {
     margin-bottom: 0;
   }
   h1:hover {
-    color: linear-gradient(indigo, purple, magenta, pink);
+    background: -webkit-gradient(linear, left top, left bottom, from(indigo), color-stop(purple), color-stop(magenta), to(pink));
+    background: linear-gradient(indigo, purple, magenta, pink);
     -webkit-transition: .4s;
     transition: .4s;
   }
