--- a/styles/main.scss
+++ b/styles/main.scss
@@ -228,7 +228,7 @@ footer .socialmedia img{
   
     }
     h1:hover{
-        background: linear-gradient(indigo, purple, magenta, pink);
+        background: -webkit-linear-gradient(indigo, purple, magenta, pink);
         transition: .4s;
         
     }
