--- a/styles/main.scss
+++ b/styles/main.scss
@@ -229,7 +229,7 @@ footer .socialmedia img{
     }
     h1:hover{
         transition: 6s;
-        background: -webkit-linear-gradient(rgb(209, 171, 232), rgb(175, 136, 175), rgb(165, 96, 165), rgb(255, 192, 239));
+        background: -webkit-linear-gradient(#ff5050, rgb(223, 150, 137), rgb(165, 96, 96));
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         
