--- a/styles/main.scss
+++ b/styles/main.scss
@@ -21,6 +21,10 @@ $color4: black;
 
 img{
     max-width: 100%;
+
+}
+img:hover {
+    zoom: 200%;
 }
 
 html{
@@ -227,13 +231,13 @@ footer .socialmedia img{
         margin-bottom: 0;
   
     }
-    h1:hover{
-        transition: 6s;
-        background: -webkit-linear-gradient(#ff5050, rgb(223, 150, 137), rgb(165, 96, 96));
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
+    // h1:hover{
+    //     transition: 6s;
+    //     background: -webkit-linear-gradient(#ff5050, rgb(223, 150, 137), rgb(165, 96, 96));
+    //     -webkit-background-clip: text;
+    //     -webkit-text-fill-color: transparent;
         
-    }
+    // }
 
     h2 {
         font-size: 300%;
