--- a/styles/main.css
+++ b/styles/main.css
@@ -165,7 +165,7 @@ footer .socialmedia img {
 }
 
 /*Desktop Version*/
-@media only screen and (min-width: 50em) {
+@media only screen and (min-width: 1340) {
   header {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
