--- a/styles/main.scss
+++ b/styles/main.scss
@@ -179,7 +179,7 @@ footer .socialmedia img{
 
 /*Desktop Version*/
 
-@media only screen and (min-width: 50em) {
+@media only screen and (min-width: 1340) {
 
     header{
         justify-content: space-between;
