let's try this again

--- a/styles/main.css
+++ b/styles/main.css
@@ -26,7 +26,7 @@ body {
   color: #ededed;
   display: block;
   position: relative;
-  background-color: white;
+  background-color: black;
   max-width: 90%;
   margin-left: 5%;
   margin-right: 5%;
@@ -40,7 +40,7 @@ body {
   display: block;
   position: relative;
   padding-bottom: 120px;
-  background-color: white;
+  background-color: black;
   max-width: 90%;
   margin-left: 5%;
   margin-right: 5%;
@@ -48,7 +48,7 @@ body {
 
 header a {
   text-decoration: none;
-  color: #829b7a;
+  color: #fd802d;
 }
 
 header {
@@ -74,7 +74,7 @@ h1.header {
 }
 
 strong {
-  color: #a0b297;
+  color: #faa680;
 }
 
 h2 {
@@ -90,7 +90,7 @@ h3 {
 
 h4 {
   font-size: 200%;
-  color: #a0b297;
+  color: #faa680;
   text-transform: uppercase;
   text-align: center;
   margin-bottom: 2em;
@@ -114,7 +114,7 @@ nav.mainmenu {
 .mainmenu div {
   width: 35px;
   height: 5px;
-  background-color: #829b7a;
+  background-color: #fd802d;
   margin: 3px;
 }
 
@@ -158,7 +158,7 @@ footer {
   width: 100%;
   text-align: center;
   background-color: white;
-  color: #829b7a;
+  color: #fd802d;
 }
 
 footer .socialmedia img {
