--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,9 +3,9 @@
 
 //Color Scheme
 
-$body-background-color: white;
-$color1: rgb(130, 155, 122);
-$color2: rgb(160, 178, 151);
+$body-background-color: black;
+$color1: rgb(253, 128, 45);
+$color2: rgb(250, 166, 128);
 $color3: rgb(77, 120, 95); 
 $color4: black;
 
