--- a/styles/main.scss
+++ b/styles/main.scss
@@ -170,7 +170,7 @@ footer{
     height: 110px;
     width: 100%;
     text-align: center;
-    background-color: white;
+    background-color: $body-background-color;
     color: $color1;
 }
 
