--- a/styles/main.css
+++ b/styles/main.css
@@ -157,7 +157,7 @@ footer {
   height: 110px;
   width: 100%;
   text-align: center;
-  background-color: white;
+  background-color: black;
   color: #fd802d;
 }
 
