You know I'm all about that black

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -36,6 +36,7 @@ body{
     height: 100%;
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
+    background-color: $body-background-color;
 }
 .home {
     color: hsl(0, 0%, 93%);
