--- a/styles/main.css
+++ b/styles/main.css
@@ -268,6 +268,7 @@ footer .socialmedia img {
   }
   .home-grid {
     margin: 1em;
+    border-radius: 30%;
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: 1fr 1fr 1fr;
