--- a/styles/main.scss
+++ b/styles/main.scss
@@ -335,7 +335,7 @@ footer .socialmedia img{
 }
 .home-grid {
     margin: 1em;
-
+    border-radius: 30%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 30em 30em 30em 30em 30em 30em;
