--- a/styles/main.scss
+++ b/styles/main.scss
@@ -146,8 +146,9 @@ nav.mainmenu{
 
 
 nav a:hover{
-    transition: .3s;
+    transition: 1s;
     color: lightgray;
+    letter-spacing: 4%;
 }
 
 
