--- a/styles/main.css
+++ b/styles/main.css
@@ -134,9 +134,10 @@ nav.mainmenu {
 }
 
 nav a:hover {
-  -webkit-transition: .3s;
-  transition: .3s;
+  -webkit-transition: 1s;
+  transition: 1s;
   color: lightgray;
+  letter-spacing: 4%;
 }
 
 nav ul li.active a {
