--- a/styles/main.scss
+++ b/styles/main.scss
@@ -147,7 +147,7 @@ nav.mainmenu{
 nav a:hover{
     transition: 1s;
     color: lightgray;
-    letter-spacing: 3px;
+    letter-spacing: 3em;
 }
 
 
