--- a/styles/main.css
+++ b/styles/main.css
@@ -136,7 +136,7 @@ nav a:hover {
   -webkit-transition: 1s;
   transition: 1s;
   color: lightgray;
-  letter-spacing: 3px;
+  letter-spacing: 3em;
 }
 
 nav ul li.active a {
