--- a/styles/main.css
+++ b/styles/main.css
@@ -82,7 +82,7 @@ h2 {
   font-size: 80%;
   color: #4d785f;
   text-transform: uppercase;
-  letter-spacing: .1em;
+  letter-spacing: 6px;
 }
 
 h3 {
