--- a/styles/main.scss
+++ b/styles/main.scss
@@ -90,7 +90,7 @@ h2{
     font-size: 80%;
     color: $color3;
     text-transform: uppercase;
-    letter-spacing: .1em;
+    letter-spacing: 6px;
 }
 
 h3{
