--- a/styles/main.scss
+++ b/styles/main.scss
@@ -111,10 +111,7 @@ nav a{
     list-style: none;
     
 }
-.mainmenu li { 
-    display: none; 
-    
-}
+
 nav.mainmenu{
     margin: none;
     padding: none;
@@ -127,20 +124,17 @@ nav.mainmenu{
     margin: 3px;
 }
 
-.mainmenu.responsive div{
-    display: none;
-}
 
-.mainmenu.responsive li { 
-    display: block;	
-    width: 100%; 
-    font-size: 2em;
+// .mainmenu.responsive li { 
+//     display: block;	
+//     width: 100%; 
+//     font-size: 2em;
   
 
-}
-.mainmenu.responsive li a {	
-    text-align: left;	 
-}
+// }
+// .mainmenu.responsive li a {	
+//     text-align: left;	 
+// }
 
 
 
