--- a/styles/main.css
+++ b/styles/main.css
@@ -102,7 +102,7 @@ nav a {
   list-style: none;
 }
 
-.menu-icon span, span:before, span:after {
+.menu-icon span, span::before, span::after {
   width: 35px;
   height: 5px;
   background-color: #fd802d;
