--- a/styles/main.scss
+++ b/styles/main.scss
@@ -113,7 +113,7 @@ nav a{
 }
 
 
-.menu-icon span, span:before, span:after{
+.menu-icon span, span::before, span::after{
     width: 35px;
     height: 5px;
     background-color: $color1;
