--- a/styles/main.scss
+++ b/styles/main.scss
@@ -111,9 +111,13 @@ nav a{
     list-style: none;
     
 }
+nav ul {
+    font-size: 3em;
+    padding: 1em;
+}
 
 
-.menu-icon span & span::before & span::after{
+.menu-icon span, span::before, span::after{
     display: block;
     width: 35px;
     height: 5px;
