--- a/styles/main.css
+++ b/styles/main.css
@@ -103,8 +103,8 @@ nav a {
 }
 
 nav ul {
-  font-size: 3em;
-  padding: 1em;
+  font-size: 1em;
+  padding: .3em;
 }
 
 .menu-icon span, span::before, span::after {
