--- a/styles/main.scss
+++ b/styles/main.scss
@@ -106,7 +106,11 @@ h4 {
     margin-bottom: 2em;
 }
 
-nav a{  
+
+
+nav {
+    text-align: right;
+    & a{  
     text-decoration: none;
     list-style: none;
     
@@ -123,7 +127,7 @@ nav ul {
     height: 5px;
     background-color: $color1;
     margin: 3px;
-    text-align: right;
+    
     
 }
 
