--- a/styles/main.css
+++ b/styles/main.css
@@ -97,14 +97,27 @@ h4 {
   margin-bottom: 2em;
 }
 
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+nav {
+  text-align: right;
+}
+
 nav a {
   text-decoration: none;
   list-style: none;
 }
 
 nav ul {
-  font-size: 1em;
-  padding: .3em;
+  font-size: 1.5em;
+  padding: .5em;
 }
 
 .menu-icon span, span::before, span::after {
@@ -113,7 +126,6 @@ nav ul {
   height: 5px;
   background-color: #fd802d;
   margin: 3px;
-  text-align: right;
 }
 
 .menu-icon ul {
