--- a/styles/main.scss
+++ b/styles/main.scss
@@ -106,7 +106,10 @@ h4 {
     margin-bottom: 2em;
 }
 
-
+header {
+    display: flex;
+    justify-content: space-between;
+}
 
 nav {
     text-align: right;
@@ -114,6 +117,7 @@ nav {
     text-decoration: none;
     list-style: none;
     
+}
 }
 nav ul {
     font-size: 1.5em;
