--- a/styles/main.css
+++ b/styles/main.css
@@ -120,12 +120,20 @@ nav ul {
   padding: .5em;
 }
 
-.menu-icon span, span::before, span::after {
+.menu-icon span {
   display: block;
   width: 35px;
   height: 5px;
   background-color: #fd802d;
   margin: 3px;
+}
+
+.menu-icon span span:before {
+  margin: -6px;
+}
+
+.menu-icon span span:after {
+  margin: 12px;
 }
 
 .menu-icon ul {
