--- a/styles/main.scss
+++ b/styles/main.scss
@@ -282,10 +282,10 @@ footer .socialmedia img{
     }
 
     nav li{
-        display: inline;
+        display: contents;
     }
     .menu-icon{
-        display: inline;
+        display: contents;
 
     }
 
