--- a/styles/main.scss
+++ b/styles/main.scss
@@ -280,10 +280,7 @@ footer .socialmedia img{
         font-size: 18pt;
     }
 
-    nav li{
-        display: contents;
-    }
-    .menu-icon{
+    .menu-icon ul{
         display: contents;
 
     }
