--- a/styles/main.css
+++ b/styles/main.css
@@ -124,11 +124,11 @@ nav ul {
   margin: -6px;
 }
 
-.menu-icon span:before span:after {
+.menu-icon span:before .menu-icon span:after {
   margin: 12px;
 }
 
-.menu-icon span:before span {
+.menu-icon span:before .menu-icon span:after .menu-icon span {
   display: block;
   width: 35px;
   height: 5px;
