--- a/styles/main.scss
+++ b/styles/main.scss
@@ -259,7 +259,7 @@ footer .socialmedia img{
         text-transform: uppercase;
         
         font-size: 130%;
-        display: inline;
+        display: flex;
         word-spacing: 20pt;
     
 
