--- a/styles/main.css
+++ b/styles/main.css
@@ -203,7 +203,9 @@ footer .socialmedia img {
   nav ul {
     text-transform: uppercase;
     font-size: 130%;
-    display: inline;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     word-spacing: 20pt;
   }
   h2 {
