--- a/styles/main.css
+++ b/styles/main.css
@@ -120,20 +120,24 @@ nav ul {
   padding: .5em;
 }
 
-.menu-icon span:before {
-  margin: -6px;
-}
-
-.menu-icon span:before .menu-icon span:after {
-  margin: 12px;
-}
-
-.menu-icon span:before .menu-icon span:after .menu-icon span {
+.menu-icon {
   display: block;
   width: 35px;
   height: 5px;
   background-color: #fd802d;
   margin: 3px;
+}
+
+.menu-icon span {
+  margin: 3px;
+}
+
+.menu-icon span:before {
+  margin: 5px;
+}
+
+.menu-icon span:after {
+  margin: -5px;
 }
 
 .menu-icon ul {
