--- a/styles/main.scss
+++ b/styles/main.scss
@@ -135,10 +135,10 @@ nav ul {
         margin: 3px;
     }
     & span:before {
-        margin: 5px;
+        margin-top: 5px;
     }
     & span:after {
-        margin: -5px;
+        margin-bottom: -5px;
     }
 }
 
