--- a/styles/main.scss
+++ b/styles/main.scss
@@ -136,9 +136,11 @@ nav ul {
     }
     & span::before {
         margin-top: 5px;
+        content: "";
     }
     & span::after {
         margin-bottom: -5px;
+        content: "";
     }
 }
 
