--- a/styles/main.css
+++ b/styles/main.css
@@ -120,7 +120,7 @@ nav ul {
   padding: .5em;
 }
 
-.menu-icon {
+.menu-icon span {
   display: block;
   width: 35px;
   height: 5px;
@@ -128,16 +128,22 @@ nav ul {
   margin: 3px;
 }
 
-.menu-icon span {
-  margin: 3px;
-}
-
 .menu-icon span::before {
+  display: block;
+  width: 35px;
+  height: 5px;
+  background-color: #fd802d;
+  margin: 3px;
   margin-top: 5px;
   content: "";
 }
 
-.menu-icon span::after {
+span::after {
+  display: block;
+  width: 35px;
+  height: 5px;
+  background-color: #fd802d;
+  margin: 3px;
   margin-bottom: -5px;
   content: "";
   display: block;
