--- a/styles/main.css
+++ b/styles/main.css
@@ -129,22 +129,22 @@ nav ul {
 }
 
 .menu-icon span::before {
-  display: block;
   width: 35px;
   height: 5px;
   background-color: #fd802d;
   margin: 3px;
   margin-top: 5px;
   content: "";
+  display: block;
+  z-index: 99;
 }
 
-span::after {
-  display: block;
+.menu-icon span::after {
   width: 35px;
   height: 5px;
   background-color: #fd802d;
   margin: 3px;
-  margin-bottom: -5px;
+  margin-bottom: -10px;
   content: "";
   display: block;
   z-index: 99;
