--- a/styles/main.css
+++ b/styles/main.css
@@ -222,6 +222,10 @@ footer .socialmedia img {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     word-spacing: 20pt;
   }
   h2 {
