--- a/styles/main.scss
+++ b/styles/main.scss
@@ -278,6 +278,7 @@ footer .socialmedia img{
         
         font-size: 130%;
         display: flex;
+        flex-direction: row;
         word-spacing: 20pt;
     
 
