--- a/styles/main.css
+++ b/styles/main.css
@@ -97,6 +97,15 @@ h4 {
   margin-bottom: 2em;
 }
 
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 nav {
   text-align: right;
 }
