--- a/styles/main.scss
+++ b/styles/main.scss
@@ -106,10 +106,10 @@ h4 {
     margin-bottom: 2em;
 }
 
-// header {
-//     display: flex;
-//     justify-content: space-between;
-// }
+header {
+     display: flex;
+     justify-content: space-between;
+}
 
 nav {
     text-align: right;
