--- a/styles/main.scss
+++ b/styles/main.scss
@@ -39,7 +39,7 @@ body{
     background-color: $body-background-color;
 }
 .home {
-    color: hsl(0, 0%, 93%);
+    color: $color3;
     display: block;
     position: relative;
     background-color: $body-background-color;
