--- a/styles/main.scss
+++ b/styles/main.scss
@@ -319,10 +319,14 @@ footer .socialmedia img{
         width: 3%;
 
     }
-    .home, .container {
+    .home{
         max-width: 70%;
         margin-left: 15%;
         margin-right: 15%;
+    }
+
+    .container {
+        max-width: 100%;
     }
 
     .mypic{
