another color change

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,11 +3,11 @@
 
 //Color Scheme
 
-$body-background-color: black;
+$body-background-color: white;
 $color1: rgb(253, 128, 45);
 $color2: rgb(250, 166, 128);
 $color3: rgb(80, 77, 77); 
-$color4: white;
+$color4: black;
 
 
 
