--- a/styles/main.css
+++ b/styles/main.css
@@ -20,14 +20,14 @@ body {
   height: 100%;
   text-decoration: none;
   font-family: 'Roboto', sans-serif;
-  background-color: black;
+  background-color: white;
 }
 
 .home {
   color: #504d4d;
   display: block;
   position: relative;
-  background-color: black;
+  background-color: white;
   max-width: 90%;
   margin-left: 5%;
   margin-right: 5%;
@@ -41,7 +41,7 @@ body {
   display: block;
   position: relative;
   padding-bottom: 120px;
-  background-color: black;
+  background-color: white;
   max-width: 90%;
   margin-left: 5%;
   margin-right: 5%;
@@ -86,7 +86,7 @@ h2 {
 }
 
 h3 {
-  color: white;
+  color: black;
 }
 
 h4 {
@@ -172,7 +172,7 @@ nav ul li.active a {
 }
 
 p {
-  color: white;
+  color: black;
   font-size: 2em;
 }
 
@@ -186,7 +186,7 @@ footer {
   height: 110px;
   width: 100%;
   text-align: center;
-  background-color: black;
+  background-color: white;
   color: #fd802d;
 }
 
