--- a/styles/main.scss
+++ b/styles/main.scss
@@ -326,7 +326,8 @@ footer .socialmedia img{
     }
 
     .container {
-        max-width: 100%;
+        width: 100%;
+        
     }
 
     .mypic{
