please images work

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -319,15 +319,10 @@ footer .socialmedia img{
         width: 3%;
 
     }
-    .home{
+    .home, .container{
         max-width: 70%;
         margin-left: 15%;
         margin-right: 15%;
-    }
-
-    .container {
-        width: 100%;
-        
     }
 
     .mypic{
