--- a/styles/main.css
+++ b/styles/main.css
@@ -250,13 +250,10 @@ footer .socialmedia img {
   footer .socialmedia img {
     width: 3%;
   }
-  .home {
+  .home, .container {
     max-width: 70%;
     margin-left: 15%;
     margin-right: 15%;
-  }
-  .container {
-    width: 100%;
   }
   .mypic {
     width: 30%;
