yikes, let's try this

--- a/styles/main.css
+++ b/styles/main.css
@@ -400,7 +400,12 @@ footer .socialmedia img {
       grid-column-end: span 2;
 }
 
-.home-grid a:nth-of-type(12) img {
-  width: 100%;
+.home-grid a:nth-of-type(12) .full-image {
+  background: url(/images/cactusLogoMockup1.jpg) no-repeat center center fixed;
+  background: url(/images/cactusLogoMockup.jpg) no-repeat center center fixed;
+  background: url(/images/ProviderFarmsLogo.jpg) no-repeat center center fixed;
+  background: url(/images/providerFarmsMockupTshirt.jpg) no-repeat center center fixed;
+  background: url(/images/pinnaclePestLogoMockup.jpg) no-repeat center center fixed;
+  background: url(/images/pinnacleLogoMockup2.jpg) no-repeat center center fixed;
 }
 /*# sourceMappingURL=main.css.map */
